@@ -8,17 +8,9 @@ use DateTime;
 
 class InverterPrCriteria extends MeasurementsCriteria {
 
-    public function getDateFrom(): DateTime {
-        return DateTime::createFromFormat('Y-m-d', $this->filters['from']);
-    }
-
     public function withDateFrom(DateTime $from): self {
         $this->filters['from'] = $from->format('Y-m-d');
         return $this;
-    }
-
-    public function getDateTo(): DateTime {
-        return DateTime::createFromFormat('Y-m-d', $this->filters['to']);
     }
 
     public function withDateTo(DateTime $to): self {
