@@ -16,25 +16,11 @@ class LinearEquationCriteria extends YieldLossesCriteria {
     }
 
     /**
-     * @return DateTime
-     */
-    public function getDateReferenceFrom(): DateTime {
-        return DateTime::createFromFormat(DATE_ATOM, $this->filters['referenceFrom']);
-    }
-
-    /**
      * @param DateTime $referenceTo
      * @return LinearEquationCriteria
      */
     public function withDateReferenceTo(DateTime $referenceTo): self {
         $this->filters['referenceTo'] = $referenceTo->format(DATE_ATOM);
         return $this;
-    }
-
-    /**
-     * @return DateTime
-     */
-    public function getDateReferenceTo(): DateTime {
-        return DateTime::createFromFormat(DATE_ATOM, $this->filters['referenceTo']);
     }
 }
